# pyarrow-example-to-handle-bronze-data

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  QUICKSTART.md  README.md  WRITERS_COMPARISON.md  docker-compose.yml  pyproject.toml
docs/: parquet-writer-s3-output-stream.md  python-generators-crash-course.md
scripts/: setup_localstack.sh
src/examples/example-01-memory-intensive/: README-go.md  README.md  main.py
src/examples/example-02-first-generator/: main.py
src/examples/example-03-how-generators-work/: main.py
src/examples/example-04-iterator-protocol/: main.py
src/examples/example-05-generator-expressions/: main.py
src/examples/example-06-reading-large-files/: main.py
src/examples/example-07-infinite-sequences/: main.py
src/examples/example-08-pipeline-processing/: main.py
src/examples/example-09-generator-send/: main.py
src/examples/example-10-generator-throw/: main.py
src/examples/example-11-generator-close/: main.py
src/examples/example-12-coroutines/: main.py
src/examples/example-13-yield-from/: main.py
src/examples/example-14-state-machines/: main.py
src/examples/example-15-performance-comparison/: main.py
src/examples/example-16-when-not-to-use/: main.py
src/examples/example-17-data-processing-pipeline/: main.py
src/examples/example-18-itertools-tee/: main.py
src/parquet_s3_blocks_writer/: __init__.py  config.py  data_generator.py  main.py  parquet_writer.py  parquet_writer_interface.py  s3_streaming_parquet_writer.py  s3_uploader.py
tests/: __init__.py  test_data_generator.py  test_parquet_writer.py
(+14 files in other folders)
